proj0/tests/correct/test3.inp
* B BETA VI II I FFSG
QMJQY OVG