proj0/tests/error/noncharacter.inp
* B BETA III II I CCAF
3c1%